# controllers/list.js
@@ -122,15 +122,25 @@ const updateList = async(req, res) => {
 
 //delete user by _id
 const deleteUser = async(req, res) => {
-    const UserId = await modelUser.findById(req.params.id);
-    const result1 = await modelUser.findByIdAndDelete(UserId);
-    result1;
-    if (result1) {
-        res.status(200).json({message: 'deleted'});
+
+    const newList = {
+        fullName: req.body.fullName,
+        city: req.body.city,
+        state: req.body.state,
+        task: req.body.task,
+        date: req.body.date,
+        listToDo: req.body.listToDo
+            //city: state: task: date: listToDo:
+    };
+     
+    const idelete = await modelUser.findById(req.params.id);
+    const update_user = await modelUser.findByIdAndRemove(idelete);
+    update_user;
+    if (update_user) {
+        res.status(204).json({message: 'deleted'});
     } else {
         res.status(500).json({message: 'error happened while deleting user.'});
     }
-
 }
 
 module.exports = {
